fixed spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -146,6 +146,7 @@ h3 {
 .checklist {
     text-align: left;
     width: 330px;
+    margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
 }
